@@ -1,0 +1,35 @@
+MIME-Version: 1.0
+Received: by 10.103.33.199 with HTTP; Tue, 6 Jun 2017 14:48:27 -0700 (PDT)
+Bcc: emailtosalesforce@r-kub1lq8760pccrdt39x94qxtajhk3q4zb1fzikf15ygnugofn.6a-euhkuaa.na50.le.salesforce.com
+Date: Tue, 6 Jun 2017 14:48:27 -0700
+Delivered-To: john.doe@gmail.com
+Message-ID: <CACmaLAZ16kghp1Qf99noL2P33AnAzU7bbKfju=JASRYyscvNdw@mail.gmail.com>
+Subject: Test BCCing email (rev 2)
+From: John Doe <john.doe@gmail.com>
+To: john.smith@domain.com
+Content-Type: multipart/mixed; boundary="94eb2c03266668996305515194b6"
+
+This is a multipart message in MIME format.
+
+--94eb2c03266668996305515194b6
+Content-Type: text/plain; charset="UTF-8"
+Content-Transfer-Encoding: quoted-printable
+
+This is an email that will have some rich text and an attachment.
+
+*Because I've added some bold text here.*
+
+body 1
+*=E2=80=8B*
+*And here's some more text (still bold)*
+
+-- John
+
+--94eb2c03266668996305515194b6
+Content-Type: image/jpeg; name="mary-coffee.jpg"
+Content-Disposition: attachment; filename="mary-coffee.jpg"
+Content-Transfer-Encoding: base64
+X-Attachment-Id: f_j3m3jfpq1
+
+
+--94eb2c03266668996305515194b6--
